Add page for archived intertweets.
Various UI fixes.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,7 @@ Assign atom = true if this is an index page that has a corresponding atom page
   <link rel="stylesheet" type="text/css" 
         href="{{ site.baseurl }}/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="/css/disclojure.css">
+  <link href='http://fonts.googleapis.com/css?family=IM+Fell+English' rel='stylesheet' type='text/css'>
 
   <script type="text/javascript">
 
