Add social media sharing.
Fix layout issues.

Add a 'latest' pages and navigation between last, latest and archives.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,27 +4,30 @@
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
-
-      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </a>
-      
-      <!-- Be sure to leave the brand out there if you want it shown -->
-      <a class="brand" href="#">disclojure</a>
-
-      <div class="nav-collapse">
-        <ul class="nav">
-          <li class="divider-vertical"></li>
-          <li class="active">
-            <a href="/">Home</a> </li>
-          <!-- not yet, not yet... 
-          <li><a href="/where-to-start/">Where to start with Clojure</a><li>
-            -->
-        </ul>
-      </div>
-
+     <div class="row">
+        <div class="span8 offset2">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+           <span class="icon-bar"></span> 
+          </a>
+          <a class="brand" href="/">disclojure</a> 
+          
+         <div class="nav-collapse">
+           <ul class="nav">
+              <li class="active"> <a href="/">home</a></li>
+              <li> <a href="/latest">latest</a></li>
+              <li> <a href="/archive">archive</a></li>
+              <li> <a href="https://twitter.com/intent/user?original_referer=http%3A%2F%2Fdislcojure.org&amp;region=follow&amp;screen_name=disclojure&amp;source=followbutton&amp;variant=2.0"
+                      target="_blank">@disclojure</a></li>
+              <li><a href="http://feeds.feedburner.com/disclojure">RSS</a></li>
+              <!-- not yet, not yet... 
+              <li><a href="/where-to-start/">Where to start with Clojure</a><li>
+                -->
+            </ul>
+          </div> 
+        </div> <!-- span8 offset2 -->
+      </div> <!-- row -->
     </div>
   </div>
 </div>
