--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,13 +8,20 @@ Assign atom = true if this is an index page that has a corresponding atom page
   <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.name }}</title>
   <link rel="stylesheet" type="text/css" 
         href="{{ site.baseurl }}/css/bootstrap.min.css">
+      <style type="text/css">
+      body {
+        padding-top: 40px;
+      }
+    </style>
+      <link rel="stylesheet" type="text/css"
+            href="{{ site.baseurl }}/css/bootstrap-responsive.min.css">
   <link rel="stylesheet" type="text/css" href="/css/disclojure.css">
   <link href='http://fonts.googleapis.com/css?family=IM+Fell+English' rel='stylesheet' type='text/css'>
 
   <script type="text/javascript">
 
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-19685457-1']);
+  _gaq.push(['_setAccount', '{{site.google-analytics-id}}']);
   _gaq.push(['_trackPageview']);
 
   (function() {
