bootstrap.min.js is borked. Use boostrap.js instead

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
   </div>
 </footer>
 <script src="/js/jquery.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
+<script src="/js/bootstrap.js"></script>
 <script type="text/javascript">
   function extlink(href) {
   _gaq.push(['_trackEvent','extlink',href]);
