Add 'dynamic' navigation based on the page/post section

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,15 +15,7 @@
           
          <div class="nav-collapse">
            <ul class="nav">
-              <li class="active"> <a href="/">home</a></li>
-              <li> <a href="/latest">latest</a></li>
-              <li> <a href="/archive">archive</a></li>
-              <li> <a href="https://twitter.com/intent/user?original_referer=http%3A%2F%2Fdislcojure.org&amp;region=follow&amp;screen_name=disclojure&amp;source=followbutton&amp;variant=2.0"
-                      target="_blank">@disclojure</a></li>
-              <li><a href="http://feeds.feedburner.com/disclojure">RSS</a></li>
-              <!-- not yet, not yet... 
-              <li><a href="/where-to-start/">Where to start with Clojure</a><li>
-                -->
+             {% include navigation.html %}
             </ul>
           </div> 
         </div> <!-- span8 offset2 -->
