Make fonts smaller when on small screens.
Some formatting fixes.

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -10,11 +10,13 @@
     {{ post.content }}
   </div>
   <div id="social-toggle">
-      <a href="#disqus_thread" data-toggle="collapse"
-      data-target="#social-post">
-        Comment</a>
-      <a href="#" data-toggle="collapse" data-target="#social-post">
-        / <span id="twitter-count"></span> Tweets / Share </a>
+      <a class="dsq-comment-count comment-link commentslink"
+           href="#disqus_thread_" data-toggle="collapse"
+           data-target="#social-post">
+          Comment
+      </a>
+      <a data-toggle="collapse" data-target="#social-post">
+        / <span id="twitter-count"></span> Tweets / Share</a>
   </div>
   <div class="row">
     {% assign share-url = post.url %}
