Add support for data-driven posts. Make it look great on iPhone. Add RSS feed.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,6 +8,10 @@
     </div>
   </div>
 </footer>
+<!-- hide address bar in phones -->
+<script type="text/javascript">
+    (function(){setTimeout(function(){window.scrollTo(0, 1);}, 0);})();
+</script>
 <script src="/js/jquery.min.js"></script>
 <script src="/js/bootstrap.js"></script>
 <script type="text/javascript">
