--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@
       <div class="container">
         <div class="row">
           <div class="span8 offset2">
-            {% include legacy-post.html %}
+            {% include post.html %}
           </div>
         </div>
       </div>
