--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,7 @@ Assign atom = true if this is an index page that has a corresponding atom page
             href="{{ site.baseurl }}/css/bootstrap-responsive.min.css">
   <link rel="stylesheet" type="text/css" href="/css/disclojure.css">
   <link href='http://fonts.googleapis.com/css?family=IM+Fell+English' rel='stylesheet' type='text/css'>
-
+  <link rel="shortcut icon" href="/img/favicon.ico"/>
   <script type="text/javascript">
 
   var _gaq = _gaq || [];
