Add RSS alternative link to index pages

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,10 @@ Assign atom = true if this is an index page that has a corresponding atom page
       <link rel="stylesheet" type="text/css"
             href="{{ site.baseurl }}/css/bootstrap-responsive.min.css">
   <link rel="stylesheet" type="text/css" href="/css/disclojure.css">
-  <link href='http://fonts.googleapis.com/css?family=IM+Fell+English' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=IM+Fell+English'
+        rel='stylesheet' type='text/css'>
+  <link rel="alternate" type="application/rss+xml" title="RSS 2.0 Feed" 
+        href="http://feeds.feedburner.com/disclojure" /> 
   <link rel="shortcut icon" href="/img/favicon.ico"/>
   <script type="text/javascript">
 
