--- a/_includes/post.html
+++ b/_includes/post.html
@@ -9,25 +9,7 @@
         <a href="{{post.url}}" title="{{post.title}} &mdash; {{post.date | date: "%b %d"}}">
           {{post.title}}  &mdash; {{post.date | date: "%b %d"}}</a></h1>
   </div>
-  <div class="post_content">
-    {{ post.content | markdownify}}
-    <dl>
-      {% for it in post.intertweets %}
-      <dt><a href="{{it.url}}">{{ it.tweet }}</a> 
-        (via <a href="http://twitter.com/{{it.author}}">@{{it.author}}</a>)</dt>
-      <dd>{{it.comment | markdownify }}</dd>
-      {% endfor %}
-    </dl>
-  </div>
-  <div id="social-toggle">
-      <a class="dsq-comment-count comment-link commentslink"
-           href="#disqus_thread_" data-toggle="collapse"
-           data-target="#social-post">
-          Comment
-      </a>
-      <a data-toggle="collapse" data-target="#social-post">
-        / <span id="twitter-count"></span> Tweets / Share</a>
-  </div>
+  {% include intertweets-list.html %}
   <div class="row">
     {% assign share-url = post.url %}
     {% assign share-title = post.title %}
