--- a/_includes/social-post.html
+++ b/_includes/social-post.html
@@ -1,19 +1,28 @@
-<div id="social-post" class="row collapse">
+<div id="social-post" class="row">
   <!-- disqus comments -->
   <div class="row">
-    <div class="span3 offset1">
+    <div class="span7 offset1">
       <a href="https://twitter.com/share" class="twitter-share-button"
          data-url="http://{{site.domain}}{{share-url}}" data-text="{{share-title}}"
-         data-via="disclojure" data-size="large"
-         data-hashtags="clojure">Tweet this post</a> </div>
-    <div class="span2">
-      <a href="https://twitter.com/disclojure"
-      class="twitter-follow-button" data-show-count="true"
-      data-size="large">Follow @disclojure</a>
-    </div>
+         data-via="disclojure" data-size="small"
+         data-hashtags="clojure">Tweet this post</a> 
+
+
+       <script type="IN/Share" data-counter="right"
+               data-url="http://{{site.domain}}{{share-url}}"></script> 
+
+       <g:plusone size="medium"></g:plusone> 
+
+       <a href="https://twitter.com/disclojure"
+          class="twitter-follow-button" data-show-count="false"
+          data-size="small">Follow @disclojure</a>
+     </div>
+   </div> <!-- row -->
+  <div class="row">
     <div id="disqus_thread" class="span7 offset1"></div>
-  </div>
+  </div> <!-- row -->
+  <noscript>Please enable JavaScript to view the comments or the social sharing
+    widgets.</noscript>
 </div>
-<noscript>Please enable JavaScript to view the comments or the social sharing
-  widgets.</noscript>
+
 
