--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,24 +4,14 @@
   <body>
     {% include navbar.html %}
     {% assign post = page %}
-    
-    {% comment %} "wrapper" is needed for sticky footnote {% endcomment %}
-    <div class="post wrapper">
+    <div class="post">
       <div class="container">
         <div class="row">
           <div class="span8 offset2">
-            {% if post.layout == 'legacy-post' %}
-            {% include legacy-post.html %}
-            {% else %}
             {% include post.html %}
-            {% endif %}
           </div>
         </div>
       </div>
-      {% comment %} 
-      "push" is required for the sticky footer 
-      {% endcomment %}
-      <div class="push"></div>
     </div>
     {% include footer.html %}
   </body>
