Fix +1 sharing url

--- a/_includes/social-post.html
+++ b/_includes/social-post.html
@@ -11,7 +11,7 @@
        <script type="IN/Share" data-counter="right"
                data-url="http://{{site.domain}}{{share-url}}"></script> 
 
-       <g:plusone size="medium"></g:plusone> 
+       <g:plusone size="medium" href="http://{{site.domain}}{{share-url}}"></g:plusone> 
 
        <a href="https://twitter.com/disclojure"
           class="twitter-follow-button" data-show-count="false"
